[package]
name = "sol_improve"
version = "0.1.0"
edition = "2021"

[dependencies]
phoenix-sdk = "0.5.1"
anyhow = "1.0.52"
solana-sdk = "1.10.32"
borsh = "0.9.3"
phoenix-v1 = { version = "0.2.4", features = [ "no-entrypoint" ]} 
tokio = { version = "1.23.0", features = ["full"] }
clap = { version = "3.0.13", features = ["derive"] }
futures = "0.3.30"
lazy_static = "1.4.0"
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-tempfile = "0.5"
